done the redis functionnality